--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -5,28 +5,28 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef  mat-sort-header>Statusas</th>
             <td mat-cell *matCellDef="let element">
-                <div *ngIf="element.status === 'accepted'" class=" p-1 status-passed">Patvirtinta</div>
-                <div *ngIf="element.status === 'declined'" class=" p-1 status-declined">Atmesta</div>
-                <i *ngIf="element.status==='new'" class="fas fa-eye-slash not-seen-style">aaaa</i>
-                <i *ngIf="element.status==='seen'" class="fas fa-eye seen-style">bbbb</i>
+                <div *ngIf="element.status === 'priimta'" class=" p-1 status-passed">Patvirtinta</div>
+                <div *ngIf="element.status === 'atmesta'" class=" p-1 status-declined">Atmesta</div>
+                <i *ngIf="element.status==='nauja'" class="fas fa-eye-slash not-seen-style"></i>
+                <i *ngIf="element.status==='peržiūrėta'" class="fas fa-eye seen-style"></i>
             </td>
         </ng-container>
         <!-- Position Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="fullName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Vardas Pavardė</th>
-            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.fullName }}</td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="application_date">
+        <ng-container matColumnDef="applicationDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Aplikacijos data</th>
-            <td mat-cell *matCellDef="let element">{{ element.application_date }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.applicationDate.substring(5) }}</td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="comment_count">
+        <ng-container matColumnDef="commentCount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Komentarų skaičius</th>
-            <td mat-cell *matCellDef="let element">{{ element.comment_count }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.commentCount }}</td>
         </ng-container>
 
         <!-- Symbol Column -->
@@ -35,7 +35,7 @@
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Daugiau</th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon>launch</mat-icon>
+               <button><mat-icon (click)="openApplication(element)">launch</mat-icon></button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
