--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">Galimybė pasirašyti sutartį</div>
-    <div class="application-details-content">{{application.agreementNeeded ? "Taip (" + application.comment + ")":"Ne (" + application.comment + ")"}}</div>
+    <div class="application-details-content">{{application.agreementNeeded ? "Taip ":"Ne (" + application.comment + ")"}}</div>
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">Galimybė ateiti akademijos laiku (14-18 val. darbo dienomis)</div>
