--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -1,5 +1,6 @@
 <div class="mx-auto container-padding ">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">  
+
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
         <ng-container matColumnDef="status">
@@ -7,8 +8,10 @@
             <td mat-cell *matCellDef="let element">
                 <div *ngIf="element.status === 'priimta'" class=" p-1 status-passed">Patvirtinta</div>
                 <div *ngIf="element.status === 'atmesta'" class=" p-1 status-declined">Atmesta</div>
-                <i *ngIf="element.status==='nauja'" class="fas fa-eye-slash not-seen-style"></i>
-                <i *ngIf="element.status==='peržiūrėta'" class="fas fa-eye seen-style"></i>
+                <div *ngIf="element.status === 'potencialus'" class="p-1 status-possible">Potencialus kandidatas</div>
+                <div *ngIf="element.status === 'peržiūrėta'" class="p-1 status-seen">Peržiūrėta</div>
+                <div *ngIf="element.status === 'nauja'" class="p-1 status-new">Naujas</div>
+
             </td>
         </ng-container>
         <!-- Position Column -->
@@ -39,8 +42,15 @@
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>  
     </table>
+    <mat-card *ngIf="isLoading" 
+   style="display: flex; justify-content: center; align-items: center">
+  <mat-progress-spinner 
+    color="primary" 
+    mode="indeterminate">
+  </mat-progress-spinner>
+</mat-card>
 
     <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
 </div>
