--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,7 +24,6 @@ body {
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
-
 @media only screen and (min-width: 1001px) {
     .login-wrapper {
         min-height: 300px;
@@ -36,7 +35,6 @@ body {
         min-height: 40vh;
         min-width: 70vw;
     }
- 
 }
 .positronx {
     text-decoration: none;
@@ -124,4 +122,8 @@ input.mat-input-element {
 .form-control {
     border: 1px solid #6486c4;
 }
-
+.mat-progress-spinner {
+    margin-left: auto;
+    margin-right: auto;
+    zoom: 0.3;
+}
