--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,60 +1,61 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    <mat-card-header>
-        <h1 class="text-center">Prisijungimas</h1>
-    </mat-card-header>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-card-content>
-            <div class="form-group">
-                <label>El. paštas</label>
-                <input matInput type="emailLogin" class="form-control" id="emailLogin" formControlName="emailLogin" />
-            </div>
-            <div
-                [hidden]="loginForm.controls.emailLogin.valid || loginForm.controls.emailLogin.pristine"
-                class="alert alert-danger"
-            >
-                <div *ngIf="loginForm.controls.emailLogin.errors?.required">
-                    Elektroninis paštas yra privalomas
-                </div>
-                <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
-                    Neteisingas elektroninis paštas
-                </div>
-            </div>
-            <div class="form-group">
-                <label>Slaptažodis</label>
+  <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <mat-card-header>
+    <h1 class="text-center">Prisijungimas</h1>
+  </mat-card-header>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-card-content>
+      <div class="form-group">
+        <label>El. paštas</label>
+        <input matInput type="emailLogin" class="form-control" id="emailLogin" formControlName="emailLogin"/>
+      </div>
+      <div
+        [hidden]="loginForm.controls.emailLogin.valid || loginForm.controls.emailLogin.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="loginForm.controls.emailLogin.errors?.required">
+          Elektroninis paštas yra privalomas
+        </div>
+        <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
+          Neteisingas elektroninis paštas
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Slaptažodis</label>
 
-                <input matInput type="password" class="form-control" formControlName="passwordLogin" maxlength="30" />
-            </div>
-            <div
-                [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
-                class="alert alert-danger"
-            >
-                <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
-                    Slaptažodis yra privalomas
-                </div>
-            </div>
-        </mat-card-content>
-        <span class="align-bottom">
-            <p>{{ this.serverErrorMessage }}</p>
+        <input matInput type="password" class="form-control" formControlName="passwordLogin" maxlength="30"/>
+      </div>
+      <div
+        [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
+          Slaptažodis yra privalomas
+        </div>
+      </div>
+    </mat-card-content>
+    <span class="align-bottom">
+            <p [hidden]="isLoading">{{ this.serverErrorMessage }}</p>
             <button
-                mat-stroked-button
-                color="primary"
-                type="submit"
-                class="btn-block mt-10"
-                [disabled]="!loginForm.valid"
+              [hidden]="isLoading"
+              mat-stroked-button
+              color="primary"
+              type="submit"
+              class="btn-block mt-10"
+              [disabled]="!loginForm.valid"
             >
                 Prisijungti
             </button>
 
             <mat-progress-spinner
-                style="display: flex; justify-content: center; align-items: center"
-                color="primary"
-                *ngIf="isLoading"
-                mode="indeterminate"
+              style="margin:0 auto;"
+              color="primary"
+              *ngIf="isLoading"
+              mode="indeterminate"
             >
             </mat-progress-spinner>
         </span>
-    </form>
+  </form>
 </div>
