--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<mat-dialog-content id="dialog" >
+<mat-dialog-content id="dialog">
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog()">
       <span aria-hidden="true">&times;</span>
@@ -287,7 +287,15 @@
       <span class="align-bottom mt-4 padding-bottom">
                 <p>{{ this.serverErrorMessage }}</p>
                 <mat-hint>Registruotis galėsite užpildę visus laukus</mat-hint>
+         <mat-progress-spinner
+           style="margin:0 auto;"
+           color="primary"
+           *ngIf="isLoading"
+           mode="indeterminate"
+         >
+      </mat-progress-spinner>
                 <button
+                  [hidden]="isLoading"
                   hintLabel="Max 10 characters"
                   mat-stroked-button
                   color="primary"
