--- a/src/app/admin-comment/admin-comment.component.html
+++ b/src/app/admin-comment/admin-comment.component.html
@@ -1,7 +1,7 @@
 <div class="admin-comment">
   <div class="admin-comment-header">
-    <div id="admin-comment-author">Author</div>
-    <div id="admin-comment-date">Date</div>
+    <div id="admin-comment-author">{{comment.authorEmail}}</div>
+    <div id="admin-comment-date">{{comment.commentDate}}</div>
   </div>
-  <div class="admin-comment-content">Text<br>Text</div>
+  <div class="admin-comment-content">{{comment.comment}}</div>
 </div>
