fixed naming difference for 'seen' status

--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -9,7 +9,7 @@
                 <div *ngIf="element.status === 'PRIIMTA'" class=" p-1 status-passed">Patvirtinta</div>
                 <div *ngIf="element.status === 'ATMESTA'" class=" p-1 status-declined">Atmesta</div>
                 <div *ngIf="element.status === 'POTENCIALUS'" class="p-1 status-possible">Potenciali</div>
-                <div *ngIf="element.status === 'PERŽIŪRĖTA'" class="p-1 status-seen">Peržiūrėta</div>
+                <div *ngIf="element.status === 'PERZIURETA'" class="p-1 status-seen">Peržiūrėta</div>
                 <div *ngIf="element.status === 'NAUJA'" class="p-1 status-new">Nauja</div>
 
             </td>
