fixed blank comment accepting

--- a/src/app/admin-comment-write/admin-comment-write.component.scss
+++ b/src/app/admin-comment-write/admin-comment-write.component.scss
@@ -28,3 +28,7 @@
   min-width: 100px;
   margin-top: .5rem;
 }
+.admin-comment-content button:disabled{
+  background: #b5c5e3;
+  border-color: #a3b7dc;
+}
