--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,8 @@ body{
   font-family: 'Nunito', sans-serif;
   min-height: 100vh;
 }
+.mat-simple-snackbar > span {
+  width: 100%;
+  text-align: center;
+}
 
