--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 
 <mat-toolbar class="header"><i class="material-icons mr-1"> school </i><a href="#">IT Academy</a>
     <div class="spacer"></div>
-  <button *ngIf="logInCheck()" mat-raised-button (click)="openApplications()" class="menu-button">Paraiškos</button>
+  <button *ngIf="!adminCheck()&&logInCheck()" mat-raised-button class="menu-button">Mano paraiška</button>
+  <button *ngIf="adminCheck()" mat-raised-button (click)="openApplications()" class="menu-button">Paraiškos</button>
   <button *ngIf="logInCheck()" mat-raised-button (click)="onLogOut()" class="menu-button">Atsijungti</button>
   <button *ngIf="!logInCheck()" mat-raised-button (click)="openDialog()" class="menu-button">Prisijungti</button>
 </mat-toolbar>
