--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -19,7 +19,7 @@
   <div id="admin-comments" [hidden]="isLoading">
     <div id="admin-comments-header">Komentarai</div>
     <div class="comment" *ngFor="let comment of comments$ | async">
-      <app-admin-comment [comment]="comment"></app-admin-comment>
+      <app-admin-comment [comment]="comment" [isEditable]="isCommentEditable(comment.authorEmail)" (commentSave)="onCommentEdited($event)"></app-admin-comment>
     </div>
     <hr>
     <app-admin-comment-write (commentSave)="onCommentSaved($event)"></app-admin-comment-write>
