--- a/src/app/admin-comment/admin-comment.component.scss
+++ b/src/app/admin-comment/admin-comment.component.scss
@@ -1,5 +1,4 @@
 .admin-comment{
-  //background:  #f0f0f0;
   margin-bottom: 1.5vh;
   -webkit-box-shadow: 0px 1px 5px 1px rgba(140,140,140,0.5);
   -moz-box-shadow: 0px 1px 5px 1px rgba(140,140,140,0.5);
@@ -14,3 +13,34 @@
 .admin-comment-header, .admin-comment-content{
   padding: .375rem .75rem;
 }
+.author-comment-edit{
+  color: grey;
+  font-style: italic;
+}
+.author-comment-edit:hover{
+  color: grey;
+  cursor: pointer;
+}
+.author-comment-edit-field{
+  width: 100%;
+  border: #d6d6d6 solid 1px;
+}
+.admin-comment-content{
+  display: flex;
+  flex-direction: column;
+}
+.admin-comment-content button{
+  width: 10vw;
+  align-self: flex-end;
+  background: #6486C4;
+  height: 35px;
+  border-radius: 5px;
+  color: #fff;
+  border-color: #5D7EB8;
+  min-width: 100px;
+}
+.admin-comment-content button:disabled{
+  background: #b5c5e3;
+  border-color: #a3b7dc;
+}
+
