--- a/src/app/admin-comment/admin-comment.component.scss
+++ b/src/app/admin-comment/admin-comment.component.scss
@@ -13,9 +13,13 @@
 .admin-comment-header, .admin-comment-content{
   padding: .375rem .75rem;
 }
+#admin-comment-date{
+  min-width: 100px;
+}
 .author-comment-edit{
   color: grey;
   font-style: italic;
+  padding-left: .5rem;
 }
 .author-comment-edit:hover{
   color: grey;
