--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -5,14 +5,18 @@
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef  mat-sort-header>Statusas</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Statusas</th>
             <td mat-cell *matCellDef="let element">
-                <div *ngIf="element.status === 'PRIIMTA'" class=" p-1 status-passed">Patvirtinta</div>
-                <div *ngIf="element.status === 'ATMESTA'" class=" p-1 status-declined">Atmesta</div>
-                <div *ngIf="element.status === 'POTENCIALUS'" class="p-1 status-possible">Potenciali</div>
-                <div *ngIf="element.status === 'PERZIURETA'" class="p-1 status-seen">Peržiūrėta</div>
-                <div *ngIf="element.status === 'NAUJA'" class="p-1 status-new">Nauja</div>
-
+                <div *ngIf="element.status === 'PRIIMTA'" order="1" class=" p-1 status-passed">Patvirtinta</div>
+                <div *ngIf="element.status === 'ATMESTA'" order="2" class=" p-1 status-declined">Atmesta</div>
+                <div *ngIf="element.status === 'POTENCIALUS'" order="4" class="p-1 status-possible">Potenciali</div>
+                <div *ngIf="element.status === 'PERZIURETA'" order="3" class="p-1 status-seen">
+                    Peržiūrėta
+                </div>
+                <div *ngIf="element.status === 'NAUJA'" class="p-1 status-new">
+                    <p hidden>a</p>
+                    Nauja
+                </div>
             </td>
         </ng-container>
         <!-- Position Column -->
@@ -35,23 +39,19 @@
 
         <!-- Symbol Column -->
 
-
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Daugiau</th>
             <td mat-cell *matCellDef="let element">
-               <button><mat-icon (click)="openApplication(element)">launch</mat-icon></button>
+                <button><mat-icon (click)="openApplication(element)">launch</mat-icon></button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-card *ngIf="isLoading"
-   style="display: flex; justify-content: center; align-items: center">
-  <mat-progress-spinner
-    color="primary"
-    mode="indeterminate">
-  </mat-progress-spinner>
-</mat-card>
+
+    <mat-card *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center">
+        <mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
+    </mat-card>
 
     <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
 </div>
