--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -59,3 +59,15 @@
 .spacer{
   flex: 1 1 auto;
 }
+#login{
+  margin-right: 30px;
+}
+#logout{
+  margin-right: 30px;
+}
+#paraiskos{
+  margin-right: 5px;
+}
+.button2:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
