--- a/src/app/application-details/application-details.component.scss
+++ b/src/app/application-details/application-details.component.scss
@@ -1,10 +1,47 @@
 .application-header{
   width: 100%;
-  text-align: center;
+  text-align: left;
   font-size: 30px;
-  padding: 30px 10px;
+  padding-left: 1rem;
+  padding-bottom: 5px ;
 }
-#application-details-wrapper{
+.application-header-second{
+  width: 100%;
+  text-align: left;
+  font-size: 15px;
+  padding-left: 1rem;
+}
+.icon-padding{
+  padding-left: 5px;
+  padding-right :3px ;
+}
+
+.block{
+  width:100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  font-size: 25px;
+  text-align: center;
+}
+.status-declined{
+  background-color: rgba(255, 0, 10, 0.45);
+}
+.status-accepted {
+  background-color: rgba(46, 183, 3, 0.45);
+}
+.status-possible{
+  background-color: rgba(255, 127, 0, 0.45);
+}
+.status-seen{
+  background-color: rgba(206, 205, 195, 0.45);
+}
+
+.application-details-wrapper{
+  padding-top: 20px;
+  padding-bottom: 20px;
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   background: white;
@@ -19,4 +56,9 @@
 .application-details-content{
   margin-left: 1rem;
   word-wrap: break-word;
+}
+.application-detail-contacts{
+  padding-top: 30px;
+  padding-left: .75rem;
+  padding-bottom:.375rem ;
 }
