--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -1,18 +1,18 @@
 <div class="application-details-wrapper" *ngIf="application">
 
-    <div class="row">
-      <div class="col-7">
-        <div class="application-header">{{application.fullName}}</div>
-        <div class="application-header-second">{{application.applicationDate}}</div>
-      </div>
-      <div class="col-4 ">
-          <div class="block status-declined" *ngIf ="application.status==='ATMESTA'">Atmesta</div>
-          <div class="block status-accepted" *ngIf="application.status==='PRIIMTA'">Priimta</div>
-          <div class="block status-possible" *ngIf="application.status==='POTENCIALUS'">Potencialus</div>
-          <div class="block status-null" *ngIf="noStatusAdmin()">Nenustatyta</div>
-        <div class="block status-null-user" *ngIf="noStatusUser()">Gauta</div>
-        </div>
+  <div class="row">
+    <div class="col-7">
+      <div class="application-header">{{application.fullName}}</div>
+      <div class="application-header-second">{{application.applicationDate}}</div>
     </div>
+    <div class="col-4 ">
+      <div class="block status-declined" *ngIf="application.status==='ATMESTA'">Atmesta</div>
+      <div class="block status-accepted" *ngIf="application.status==='PRIIMTA'">Priimta</div>
+      <div class="block status-possible" *ngIf="potential()">Potencialus</div>
+      <div class="block status-null" *ngIf="noStatusAdmin()">Nenustatyta</div>
+      <div class="block status-null-user" *ngIf="noStatusUser()">Gauta</div>
+    </div>
+  </div>
 
   <div class="application-detail-contacts">
     <div class="row">
@@ -27,8 +27,8 @@
 
     </div>
 
-      <i class="fas fa-book-open icon-padding"></i>
-      {{application.education}}
+    <i class="fas fa-book-open icon-padding"></i>
+    {{application.education}}
 
   </div>
   <mat-divider></mat-divider>
