changing edit and delete to lithuanian names

--- a/src/app/admin-comment/admin-comment.component.html
+++ b/src/app/admin-comment/admin-comment.component.html
@@ -1,8 +1,8 @@
 <div class="admin-comment">
   <div class="admin-comment-header">
     <div id="admin-comment-author">{{comment.author}}
-      <a class="author-comment-edit" *ngIf="isEditable && !inEditMode" (click)="switchEditMode()">Edit...</a>
-      <a class="author-comment-edit" *ngIf="isEditable && !inEditMode" (click)="onCommentDeleted()">Delete...</a>
+      <a class="author-comment-edit" *ngIf="isEditable && !inEditMode" (click)="switchEditMode()">Keisti...</a>
+      <a class="author-comment-edit" *ngIf="isEditable && !inEditMode" (click)="onCommentDeleted()">Trinti...</a>
     </div>
     <div id="admin-comment-date">{{comment.commentDate}}</div>
   </div>
