adding special remark if no comments are written

--- a/src/app/admin-application-details/admin-application-details.component.scss
+++ b/src/app/admin-application-details/admin-application-details.component.scss
@@ -72,4 +72,10 @@ hr{
   margin-top: 3vh;
   margin-bottom: 3vh;
 }
+.comment-missing-remark{
+  text-align: center;
+  width: 100%;
+  font-style: italic;
+  color: grey;
+}
 
