--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<mat-dialog-content id="dialog">
+<mat-dialog-content id="registration">
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog()">
       <span aria-hidden="true">&times;</span>
@@ -16,16 +16,21 @@
           class="form-control"
           id="name"
           formControlName="firstAndLastName"
-          maxlength="80"
+          maxlength="40"
         />
       </div>
+
       <div
-        [hidden]="
-                    registrationForm.controls.firstAndLastName.valid ||
-                    registrationForm.controls.firstAndLastName.pristine
-                "
+        [hidden]="registrationForm.controls.firstAndLastName.valid ||
+                    registrationForm.controls.firstAndLastName.pristine"
         class="alert alert-danger"
       >
+        <div *ngIf="registrationForm.controls.firstAndLastName.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
+        </div>
+        <div *ngIf="registrationForm.controls.firstAndLastName.hasError('hasLettersOnly')">
+          Šiame lauke gali būti tik raidės
+        </div>
         <div *ngIf="registrationForm.controls.firstAndLastName.errors?.required">
           Vardas ir pavardė turi būti įvesti
         </div>
@@ -57,29 +62,15 @@
         [hidden]="registrationForm.controls.phoneNumber.valid || registrationForm.controls.phoneNumber.pristine"
         class="alert alert-danger"
       >
-        <div
-          *ngIf="
-                        registrationForm.controls.phoneNumber.errors?.maxlength &&
-                        registrationForm.controls.phoneNumber.touched
-                    "
-        >
+        <div *ngIf="registrationForm.controls.phoneNumber.errors?.maxlength">
           Telefono numeris privalo būti 8 skaičių ilgumo
         </div>
 
-        <div
-          *ngIf="
-                        registrationForm.controls.phoneNumber.errors?.required &&
-                        !registrationForm.controls.phoneNumber.touched
-                    "
-        >
+        <div *ngIf="registrationForm.controls.phoneNumber.errors?.required">
           Telefono numeris yra privalomas
         </div>
         <div
-          *ngIf="
-                        registrationForm.controls.phoneNumber.errors?.pattern &&
-                        !registrationForm.controls.phoneNumber.touched
-                    "
-        >
+          *ngIf="registrationForm.controls.phoneNumber.errors?.pattern">
           Telefono numeris tūrėtų būti tik iš skaičių
         </div>
       </div>
@@ -91,10 +82,8 @@
           class="form-control"
           id="email"
           formControlName="emailReg"
-          maxlength="255"
+          maxlength="50"
         />
-
-
       </div>
       <div
         [hidden]="registrationForm.controls.emailReg.valid || registrationForm.controls.emailReg.pristine"
@@ -119,7 +108,7 @@
           class="form-control"
           id="school"
           formControlName="schoolName"
-          maxlength="255"
+          maxlength="50"
         />
       </div>
       <div
@@ -128,6 +117,9 @@
       >
         <div *ngIf="registrationForm.controls.schoolName.errors?.required">
           Šis laukas privalomas
+        </div>
+        <div *ngIf="registrationForm.controls.schoolName.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
         </div>
       </div>
       <div class="form-group">
@@ -149,6 +141,9 @@
         <div *ngIf="registrationForm.controls.hobbies.errors?.required">
           Šis laukas privalomas
         </div>
+        <div *ngIf="registrationForm.controls.hobbies.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
+        </div>
       </div>
       <div class="form-group">
         <label>Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau</label>
@@ -158,7 +153,7 @@
           <mat-radio-button value="false" color="primary">Ne</mat-radio-button>
         </mat-radio-group>
         <div
-          [hidden]="registrationForm.controls.contract.valid || registrationForm.controls.drive.pristine"
+          [hidden]="registrationForm.controls.contract.valid || registrationForm.controls.contract.pristine"
           class="alert alert-danger"
         >
           <div *ngIf="registrationForm.controls.contract.errors?.required">
@@ -174,6 +169,14 @@
           formControlName="contractDescription"
           maxlength="1500"
         ></textarea>
+        <div
+          [hidden]="registrationForm.controls.contractDescription.valid || registrationForm.controls.contractDescription.pristine"
+          class="alert alert-danger"
+        >
+          <div *ngIf="registrationForm.controls.contractDescription.hasError('hasGaps')">
+            Šiame lauke negali būti tik tarpai
+          </div>
+        </div>
       </div>
       <label>Numatytas praktikos laikas darbo dienomis 14-18 val. Ar galėsi akademijai skirti tiek laiko?</label>
       <br/>
@@ -200,6 +203,9 @@
         <div *ngIf="registrationForm.controls.drive.errors?.required">
           Šis laukas privalomas
         </div>
+        <div *ngIf="registrationForm.controls.drive.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
+        </div>
       </div>
       <div class="form-group">
         <label for="experience"
@@ -223,6 +229,9 @@
         <div *ngIf="registrationForm.controls.experience.errors?.required">
           Šis laukas privalomas
         </div>
+        <div *ngIf="registrationForm.controls.experience.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
+        </div>
       </div>
       <div class="form-group">
         <label for="fromWhere">Iš kur sužinojai apie IT akademiją?</label>
@@ -242,6 +251,9 @@
       >
         <div *ngIf="registrationForm.controls.fromWhere.errors?.required">
           Šis laukas privalomas
+        </div>
+        <div *ngIf="registrationForm.controls.fromWhere.hasError('hasGaps')">
+          Šiame lauke negali būti tik tarpai
         </div>
       </div>
       <div class="form-group">
