--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,7 +50,7 @@
             </button>
 
             <mat-progress-spinner
-              style="margin:0 auto;"
+              class="spinner-styler"
               color="primary"
               *ngIf="isLoading"
               mode="indeterminate"
