--- a/src/app/student-page/student-page.component.html
+++ b/src/app/student-page/student-page.component.html
@@ -1,6 +1,6 @@
 <div id="student-application-details-wrapper">
   <mat-progress-spinner
-    style="margin:0 auto;"
+    class="spinner-styler"
     color="primary"
     *ngIf="isLoading"
     mode="indeterminate"
