--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -7,13 +7,11 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Statusas</th>
             <td mat-cell *matCellDef="let element">
-                <div *ngIf="element.status === 'PRIIMTA'" order="1" class=" p-1 status-passed">Patvirtinta</div>
-                <div *ngIf="element.status === 'ATMESTA'" order="2" class=" p-1 status-declined">Atmesta</div>
-                <div *ngIf="element.status === 'POTENCIALUS'" order="4" class="p-1 status-possible">Potenciali</div>
-                <div *ngIf="element.status === 'PERZIURETA'" order="3" class="p-1 status-seen">
-                    Peržiūrėta
-                </div>
-                <div *ngIf="element.status === 'NAUJA'" class="p-1 status-new">
+                <div *ngIf="element.status === status.PRIIMTA" order="1" class=" p-1 status-passed">Patvirtinta</div>
+                <div *ngIf="element.status === status.ATMESTA" order="2" class=" p-1 status-declined">Atmesta</div>
+                <div *ngIf="element.status === status.POTENCIALUS" order="4" class="p-1 status-possible">Potenciali</div>
+                <div *ngIf="element.status === status.PERZIURETA" order="3" class="p-1 status-seen">Peržiūrėta</div>
+                <div *ngIf="element.status === status.NAUJA" class="p-1 status-new">
                     <p hidden>a</p>
                     Nauja
                 </div>
