--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -312,7 +312,7 @@
                 <p>{{ this.serverErrorMessage }}</p>
                 <mat-hint>Registruotis galėsite užpildę visus laukus</mat-hint>
          <mat-progress-spinner
-           style="margin:0 auto;"
+           class="spinner-styler"
            color="primary"
            *ngIf="isLoading"
            mode="indeterminate"
