--- a/src/app/applications/applications.component.scss
+++ b/src/app/applications/applications.component.scss
@@ -1,117 +1,117 @@
 @media only screen and (min-width: 1001px){
-  @media only screen and (max-width: 1300px){
-    .container-padding{
-      width: 70vw;
-    }
+  .container-padding{
+    width: 70vw;
   }
-  @media only screen and (min-width: 1301px){
-    .container-padding{
-      width: 60vw;
-    }
+  .mat-column-commentCount{
+    max-width: 10%;
   }
-  .container-content{
-    width: 100%;
-    padding-left: 5vw;
-    padding-right: 5vw;
+  .mat-column-applicationDate{
+    max-width: 20%;
   }
-}
-table {
-  width: 100%;
-}
-.mat-column-commentCount{
-    max-width: 60px;
-}
-.mat-column-applicationDate{
-  max-width: 80px;
-}
-.mat-column-action{
-  max-width: 40px;
-}
+  .mat-column-action{
+    max-width: 10%;
+  }
+  .mat-column-status{
+    max-width: 20%;
+  }
 
-.status-passed{
-  background-color: rgba(46,183,3,0.55);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
+  .container-padding{
+    font-size: 16px;
+  }
+
+  .container-title{
+    padding-top: 5vh;
+    padding-bottom: 7vh;
+    text-align: center;
+    font-size: 35px;
+  }
+
+  .seen-style{
+    padding-left: 7px;
+    padding-right: 1px;
+  }
+  .not-seen-style{
+    padding-left: 6px
+  }
+  .status-null{
+    background-color: rgba(105, 105, 105, 0.55);
+    border-radius: 5px;
+    width: 100px;
+    text-align: center;
+  }
+
+  .seen-style{
+    padding-left: 7px;
+    padding-right: 1px;
+  }
+  .not-seen-style{
+    padding-left: 6px
+  }
+  .status-padding{
+    padding: .25rem;
+  }
 }
 @media only screen and (max-width: 1000px){
   .container-padding{
     width: 100vw;
+    line-height: 1.25;
+    min-height: 100vh;
+    font-size: 14px;
   }
-  .container-content{
-    width: 100%;
-    padding-left: 5vw;
-    padding-right: 5vw;
+  .mat-table {
+    border: 0;
+    vertical-align: middle
+  }
+
+  .mat-table .mat-row {
+    border-bottom: 5px solid #ddd;
+    display: block;
+  }
+
+  .mat-table .mat-cell {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    text-align: right;
+    min-height: 5vh;
+    margin-bottom: 4%;
+  }
+  .mat-table .mat-cell:before {
+    content: attr(data-label);
+    float: left;
+    font-weight: normal;
+  }
+  .mat-cell{
+    padding-right: 10vw;
+    padding-left: 10vw;
+  }
+  .mat-table .mat-cell:last-child {
+    border-bottom: 0;
+  }
+  .mat-table .mat-cell:first-child {
+    margin-top: 4%;
+  }
+  .mat-header-cell{
+    padding-right: 0;
+  }
+  .mat-row{
+    min-height: 0;
+  }
+  button{
+    padding: 0;
+  }
+  .mat-column-status:before{
+    background-color: white;
+    text-align: left;
   }
 }
-
-.container-content{
-  padding-bottom: 2vh;
+mat-tab {
+   max-width: 100%;
 }
-
-.container-title{
-  padding-top: 5vh;
-  padding-bottom: 7vh;
-  text-align: center;
-  font-size: 35px;
-}
-
 .container-padding{
   background: white;
   font-family: 'Nunito', sans-serif;
-  font-size: 16px;
   min-height: 85vh;
   box-shadow: 0px 0px 15px 0px rgba(110,110,110,0.75);
-}
-.seen-style{
-  padding-left: 7px;
-  padding-right: 1px;
-}
-.not-seen-style{
-  padding-left: 6px
-}
-.status-null{
-  background-color: rgba(105, 105, 105, 0.55);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.status-passed{
-  background-color: rgba(46,183,3,0.55);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.status-declined{
-  background-color: rgba(255, 0, 10, 0.55);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.status-possible{
-  background-color: rgba(255, 127, 0, 0.81);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.status-seen{
-  background-color: rgba(206, 205, 195, 0.81);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.status-new{
-  background-color: rgba(0, 81, 255, 0.81);
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-}
-.seen-style{
-  padding-left: 7px;
-  padding-right: 1px;
-}
-.not-seen-style{
-  padding-left: 6px
 }
 button {
   background-color: Transparent;
@@ -121,3 +121,28 @@ button {
   overflow: hidden;
   outline:none;
 }
+
+.status-null, .status-passed, .status-declined, .status-possible, .status-seen, .status-new{
+  border-radius: 5px;
+  width: 100px;
+  text-align: center;
+  display: inline-block;
+}
+.status-passed{
+  background-color: rgba(46,183,3,0.55);
+}
+.status-declined{
+  background-color: rgba(255, 0, 10, 0.55);
+}
+.status-possible{
+  background-color: rgba(255, 127, 0, 0.81);
+}
+.status-seen{
+  background-color: rgba(206, 205, 195, 0.81);
+}
+.status-new{
+  background-color: rgba(0, 81, 255, 0.81);
+}
+
+
+
