--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -18,7 +18,7 @@
   </div>
   <div id="admin-comments" [hidden]="isLoading">
     <div id="admin-comments-header">Komentarai</div>
-    <div class="comment-missing-remark" [hidden]="comments.length > 0">Komentarų nėra...</div>
+    <div class="comment-missing-remark" [hidden]="comments && comments.length > 0">Komentarų nėra...</div>
     <div class="comment" *ngFor="let comment of comments">
       <app-admin-comment [comment]="comment" [isEditable]="isCommentEditable(comment.authorEmail)" (commentSave)="onCommentEdited($event)" (commentDelete)="onCommentDeleted($event)"></app-admin-comment>
     </div>
