--- a/src/app/admin-comment/admin-comment.component.scss
+++ b/src/app/admin-comment/admin-comment.component.scss
@@ -30,7 +30,7 @@
   border: #d6d6d6 solid 1px;
 }
 .admin-comment-content{
-  word-break: break-all;
+  word-break: break-word;
   display: flex;
   flex-direction: column;
 }
