--- a/src/app/admin-application-details/admin-application-details.component.scss
+++ b/src/app/admin-application-details/admin-application-details.component.scss
@@ -17,11 +17,11 @@
   flex-direction: column;
 }
 
-#admin-comments{
+.admin-comments{
   padding: .375rem .75rem;
 }
 
-#admin-comments-header{
+.admin-comments-header{
   font-size: 20px;
   text-align: center;
   margin-bottom: .75rem;
