--- a/src/app/admin-comment-write/admin-comment-write.component.html
+++ b/src/app/admin-comment-write/admin-comment-write.component.html
@@ -1,7 +1,7 @@
 <div class="admin-comment-write-container">
   <form [formGroup]="commentForm" (ngSubmit)="onCommentSaved(); commentForm.reset()">
     <div class="admin-comment-content">
-      <textarea id="commentBody" formControlName="commentBody" placeholder="Naujas komentaras..."></textarea>
+      <textarea formControlName="commentBody" placeholder="Naujas komentaras..."></textarea>
       <button type='submit' [disabled]="!commentForm.valid">Išsaugoti</button>
     </div>
   </form>
