--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-7">
       <div class="application-header">{{application.fullName}}</div>
-      <div class="application-header-second">{{application.applicationDate}}</div>
+      <div class="application-header-second">{{application.applicationDate | date: 'yyyy-MM-dd'}}</div>
     </div>
     <div class="col-4 ">
       <div class="block status-declined" *ngIf="application.status===status.ATMESTA">Atmesta</div>
