--- a/src/app/student-page/student-page.component.html
+++ b/src/app/student-page/student-page.component.html
@@ -14,6 +14,7 @@
     <div class="comment" *ngFor="let comment of comments ">
       <app-student-comment [comment]="comment"></app-student-comment>
     </div>
+    <app-admin-comment-write ></app-admin-comment-write>
     <hr>
   </div>
 </div>
