--- a/src/app/student-page/student-page.component.scss
+++ b/src/app/student-page/student-page.component.scss
@@ -66,3 +66,9 @@ hr{
   margin-top: 3vh;
   margin-bottom: 3vh;
 }
+.comment-missing-remark{
+  text-align: center;
+  width: 100%;
+  font-style: italic;
+  color: grey;
+}
